RF-11480 horizontal scrolling fix

--- a/src/main/webapp/resources/css/mobile/global.css
+++ b/src/main/webapp/resources/css/mobile/global.css
@@ -31,6 +31,8 @@ body {
     padding: 0;
     height: 100%;
     font: 1.2em "Lucida Sans Unicode", "Lucida Grande", Geneva, Verdana, Arial, sans-serif;
+    /*width:100%;*/
+
 }
 
 a {
@@ -46,8 +48,6 @@ Mobile Device Page Setup
     /*background: #000 -webkit-gradient(linear, left top, left bottom, from(#0e0e0e), to(#313131));*/
     position: relative;
     width: 100%;
-    height: 100%;
-    /*overflow-x: hidden;*/
 }
 
 #page-container {
@@ -61,6 +61,7 @@ Mobile Device Page Setup
     position: absolute;
     width: 100%;
     height: 100%;
+    top: 0;
     /*activate the GPU for compositing each page */
     -webkit-transform: translate3d(0, 0, 0);
 }
@@ -70,9 +71,7 @@ UX Utils
 *************************************************/
 
 .stage-center {
-    top: 0;
     left: 0;
-    /*opacity: 100;*/
 }
 
 .none {
@@ -120,6 +119,12 @@ Flip Transition
 Device Specific Styles
 *************************************************/
 
+.stage-left,
+.stage-right{
+    width:1px;
+    height:1024px;
+    overflow: hidden;
+}
 /* iOS/android phone landscape screen width*/
 @media screen and (max-device-width: 480px) and (orientation:landscape) {
     .stage-left {
@@ -169,6 +174,52 @@ Device Specific Styles
 /*************************************************
 Page Formatting - Skin
 *************************************************/
+
+/*Custom Buttons and bars*/
+.left-header-button {
+   font-weight: bold;
+   font-size: 12px;
+   color: #fff;
+   text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
+   text-align: center;
+   text-overflow: ellipsis;
+   height: 30px;
+   width: 60px;
+   position: absolute;
+   top: 7px;
+   left: 5px;
+   line-height: 30px;
+}
+
+.right-header-button {
+   font-weight: bold;
+   font-size: 12px;
+   color: #fff;
+   text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
+   text-align: center;
+   text-overflow: ellipsis;
+   height: 30px;
+   width: 60px;
+   position: absolute;
+   top: 7px;
+   right: 5px;
+   line-height: 30px;
+}
+
+.basic-button {
+   background: #000 -moz-linear-gradient(90deg, rgba(0, 0, 0, .3) 33%, rgba(255, 255, 255, .1) 123%);
+   background: #000 -webkit-gradient(linear, left top, left bottom, from(#717172), to(#0f0f10), color-stop(0.5, #3a3a3a), color-stop(0.5, #0d0d0f));
+   border-radius: 7px;
+   mozborder-radius: 7px;
+   webkitborder-radius: 7px;
+   border: none;
+
+}
+
+.hide-button {
+    display:none;
+    opacity: 0;
+}
 
 div#browser > header > div {
    position: relative;
